@@ -1,11 +1,11 @@
-# @(#)$Ident: IO.pm 2013-06-28 15:10 pjf ;
+# @(#)$Ident: IO.pm 2013-06-30 15:53 pjf ;
 
 package File::DataClass::IO;
 
 use 5.010001;
 use namespace::clean -except => 'meta';
 use overload '""' => sub { shift->pathname }, fallback => 1;
-use version; our $VERSION = qv( sprintf '0.21.%d', q$Rev: 19 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.21.%d', q$Rev: 21 $ =~ /\d+/gmx );
 
 use English                    qw( -no_match_vars );
 use Exporter 5.57              qw( import );
@@ -322,7 +322,6 @@ sub close {
    $self->_set_io_handle( undef );
    $self->_set_is_open  ( FALSE );
    $self->_set_mode     ( q(r)  );
-   $self->_chomp        ( FALSE );
    return $self;
 }
 
@@ -793,7 +792,8 @@ sub _rename_atomic {
 }
 
 sub reset {
-   return $_[ 0 ]->close;
+   # TODO: Add the other bools that can be reset to their defaults
+   my $self = shift; $self->close; $self->_chomp( FALSE ); return $self;
 }
 
 sub rmdir {
@@ -992,7 +992,7 @@ File::DataClass::IO - Better IO syntax
 
 =head1 Version
 
-This document describes version v0.21.$Rev: 19 $
+This document describes version v0.21.$Rev: 21 $
 
 =head1 Synopsis
 
@@ -1576,7 +1576,7 @@ Calls L</abs2rel> without an optional base path
 
    $io = io( 'path_to_file' )->reset;
 
-Alias for L</close>
+Calls L</close> and resets C<chomp> to false
 
 =head2 rmdir
 
